--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
+.background {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -17,6 +23,12 @@ code {
   margin: 35px auto 5px auto;
   display: flex;
   flex-direction: column;
-
   width: 45%;
+}
+
+.tableContainer {
+  margin: 35px auto 5px auto;
+  display: flex;
+  flex-direction: column;
+  width: 65%;
 }
