--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  background-color: #ffffff;
+  background-color: #fafafa;
   min-height: 100vh;
+  max-width: 100vw;
 }
 
 .App-logo {
