--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #fafafa;
+  background-color: rgb(255, 255, 255);
   min-height: 100vh;
   max-width: 100vw;
 }
