--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,30 @@ code {
     monospace;
 }
 
+.dashboard-row-1 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.dash-box {
+  border: 0.5px solid rgba(165, 165, 165, 0.116);
+  background-color: rgb(250, 250, 250);
+  margin-top: 1%;
+  padding: 10px;
+  width: 32%;
+}
+
+.dash-box:hover {
+  /* background-color: rgba(182, 182, 182, 0.411); */
+
+  box-shadow: 0px 0px 5px 3px rgba(205, 204, 206, 0.075),
+    0px 0px 3px 1px rgba(194, 194, 194, 0.11);
+  transition: box-shadow 0.3s ease-in-out;
+  /* color: rgb(10, 0, 143); */
+  /* box-shadow: inset 0px 5px 5px 0px rgba(179, 179, 179, 0.24),
+    inset 0px 1px 5px 0px rgba(224, 224, 224, 0.507); */
+}
+
 .form-container {
   margin: 18vh auto 5px auto;
   display: flex;
@@ -77,7 +101,7 @@ code {
 .navbar {
   height: 70px;
   display: flex;
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(248, 248, 248);
   flex-direction: column;
   justify-content: center;
   border-bottom: 0.2px solid rgba(95, 11, 112, 0.39);
@@ -123,7 +147,7 @@ code {
   background-color: rgb(250, 250, 250);
   box-shadow: 0px 0px 5px 4px rgba(114, 95, 129, 0.096),
     0px 0px 3px 2px rgba(194, 194, 194, 0.11);
-  border-radius: 8px;
+  border-radius: 3px;
   padding: 20px;
   margin: 22px 5% 5px 5%;
 
@@ -139,7 +163,7 @@ code {
 .subnavbar {
   height: 70px;
   display: flex;
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(248, 248, 248);
   flex-direction: column;
   justify-content: center;
   border-bottom: 0.2px solid rgba(95, 11, 112, 0.39);
@@ -160,26 +184,37 @@ code {
 .TimesheetsTable {
   border: 0.5px solid rgba(165, 165, 165, 0.116);
   background-color: rgb(250, 250, 250);
-  box-shadow: 0px 0px 5px 4px rgba(114, 95, 129, 0.096),
-    0px 0px 3px 2px rgba(194, 194, 194, 0.11);
-  border-radius: 8px;
+
+  border-radius: 3px;
   padding: 20px;
   margin: 22px 5% 5px 5%;
+
   display: flex;
   justify-content: space-around;
+}
+
+.TimesheetsTable:hover {
+  box-shadow: 0px 0px 5px 3px rgba(205, 204, 206, 0.075),
+    0px 0px 3px 1px rgba(194, 194, 194, 0.11);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .TimesheetsRecapTable {
   border: 0.5px solid rgba(165, 165, 165, 0.116);
   background-color: rgb(250, 250, 250);
-  box-shadow: 0px 0px 5px 4px rgba(114, 95, 129, 0.096),
-    0px 0px 3px 2px rgba(194, 194, 194, 0.11);
-  border-radius: 8px;
+
+  border-radius: 3px;
   padding: 20px;
   margin: 22px 5% 5px 5%;
   width: 40vw;
   display: flex;
   justify-content: space-around;
+}
+
+.TimesheetsRecapTable:hover {
+  box-shadow: 0px 0px 5px 3px rgba(205, 204, 206, 0.075),
+    0px 0px 3px 1px rgba(194, 194, 194, 0.11);
+  transition: box-shadow 0.3s ease-in-out;
 }
 .team-container {
   display: flex;
@@ -194,7 +229,7 @@ code {
 }
 
 .weekPicker {
-  margin-right: 3vw;
+  margin-right: 30%;
 }
 
 #components-form-demo-normal-login .login-form {
